--- a/src/css/components/blockes/index.scss
+++ b/src/css/components/blockes/index.scss
@@ -1,20 +1,19 @@
-@import "questions";
-
-.section-item {
-  padding: 100px 0 200px;
+  .section-item {
+  padding: 100px 0;
   @media screen and (max-width: 1440px) {
-    padding: 75px 0 150px;
+    padding: 75px 0;
   }
   @media screen and (max-width: 1280px) {
-    padding: 50px 0 100px;
+    padding: 50px 0;
   }
   @media screen and (max-width: 961px) {
-    padding: 40px 0 80px;
+    padding: 40px 0;
   }
   @media screen and (max-width: 740px) {
-    padding: 25px 0 50px;
+    padding: 25px 0;
   }
-  &__title{
+
+  &__title {
     font-family: Helvetica Neue World;
     font-weight: 700;
     font-size: 48px;
@@ -41,3 +40,7 @@
     }
   }
 }
+
+
+@import "questions";
+@import "vision";
