--- a/src/css/components/blockes/questions.scss
+++ b/src/css/components/blockes/questions.scss
@@ -1,4 +1,17 @@
 .questions {
+  padding: 100px 0 200px;
+  @media screen and (max-width: 1440px) {
+    padding: 75px 0 150px;
+  }
+  @media screen and (max-width: 1280px) {
+    padding: 50px 0 100px;
+  }
+  @media screen and (max-width: 961px) {
+    padding: 40px 0 80px;
+  }
+  @media screen and (max-width: 740px) {
+    padding: 25px 0 50px;
+  }
   &_item {
     //padding: 24px 36px;
     border: 1px solid #e6e6e6;
