--- a/src/css/components/layout/header.scss
+++ b/src/css/components/layout/header.scss
@@ -76,7 +76,7 @@
     }
 
     &-item {
-      font-family: Helvetica Neue World, sans-serif;
+      font-family: $font;
       font-weight: 400;
       font-size: 14px;
       line-height: 1.2;
