--- a/src/css/components/blockes/questions.scss
+++ b/src/css/components/blockes/questions.scss
@@ -37,7 +37,7 @@
 
 
     &_title{
-      font-family: Helvetica Neue World, sans-serif;
+      font-family: $font;
       font-weight: 700;
       font-size: 24px;
       line-height: 30px;
@@ -59,7 +59,7 @@
     }
     &_text {
       margin-top: 24px;
-      font-family: Helvetica Neue World,sans-serif;
+      font-family: $font;
       font-weight: 500;
       font-size: 16px;
       line-height: 24px;
