--- a/src/css/components/layout/footer.scss
+++ b/src/css/components/layout/footer.scss
@@ -36,7 +36,7 @@
     }
 
     &_title {
-      font-family: Helvetica Neue World;
+      font-family: $font;
       font-weight: 700;
       font-size: 20px;
       line-height: 42px;
@@ -64,7 +64,7 @@
     }
 
     &_text {
-      font-family: Helvetica Neue World;
+      font-family: $font;
       margin-bottom: 55px;
       font-weight: 400;
       font-size: 14px;
@@ -121,7 +121,7 @@
       margin: 0 0 23px;
     }
     &_title {
-      font-family: Helvetica Neue World;
+      font-family: $font;
       font-weight: 700;
       font-size: 20px;
       line-height: 25px;
@@ -145,7 +145,7 @@
       }
     }
     &_item {
-      font-family: Helvetica Neue World;
+      font-family: $font;
       font-weight: 400;
       font-size: 18px;
       line-height: 44px;
@@ -195,7 +195,7 @@
       width: 100%;
     }
     &_title {
-      font-family: Helvetica Neue World;
+      font-family: $font;
       font-weight: 700;
       font-size: 20px;
       line-height: 25px;
@@ -267,7 +267,7 @@
         }
       }
       p{
-        font-family: Helvetica Neue World, sans-serif;
+        font-family: $font;
         font-weight: 500;
         font-size: 18px;
         line-height: 23px;
@@ -298,7 +298,7 @@
       font-size: 16px;
       line-height: 23px;
       color: #595959;
-      font-family: Helvetica Neue World;
+      font-family: $font;
       @media screen and (max-width: 1440px) {
         font-size: 12px;
         line-height: 17px;
@@ -352,7 +352,7 @@
       font-size: 16px;
       line-height: 23px;
       color: #595959;
-      font-family: Helvetica Neue World,sans-serif;
+      font-family: $font;
       @media screen and (max-width: 1440px) {
         font-size: 14px;
         line-height: 19px;
