--- a/src/css/components/blockes/request.scss
+++ b/src/css/components/blockes/request.scss
@@ -206,6 +206,7 @@
 
   &_btn {
     width: 180px;
+    min-width: 180px;
     background: #132be2;
     box-shadow: 0 9px 20px -3px rgba(19, 43, 226, 0.25);
     text-transform: uppercase;
@@ -219,21 +220,29 @@
     color: #fff;
     @media screen and (max-width: 1440px) {
       width: 145px;
+      min-width: 145px;
+
       font-size: 14px;
       border-radius: 12px;
     }
     @media screen and (max-width: 1280px) {
       width: 105px;
+          min-width: 105px;
+
       font-size: 10px;
       border-radius: 8px;
     }
     @media screen and (max-width: 961px) {
       width: 82px;
+          min-width: 82px;
+
       font-size: 8px;
       border-radius: 4px;
     }
     @media screen and (max-width: 740px) {
       width: 100%;
+          min-width: auto;
+
       height: 22px;
       font-size: 8px;
     }
