--- a/src/css/components/layout/footer.scss
+++ b/src/css/components/layout/footer.scss
@@ -353,6 +353,7 @@
       line-height: 23px;
       color: #595959;
       font-family: $font;
+      text-align: center;
       @media screen and (max-width: 1440px) {
         font-size: 14px;
         line-height: 19px;
