--- a/src/css/components/blockes/intro.scss
+++ b/src/css/components/blockes/intro.scss
@@ -136,6 +136,7 @@
       display: block;
       margin-top: -5px;
       position: relative;
+      right: 0;
       @media screen and (max-width: 1280px) {
         height: 5px;
       }
