--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,8 @@
 $font:Helvetica Neue World,sans-serif;
+@import "fonts";
 @import "libs";
 @import "./tailwind";
 @import "./main";
+button{
+  text-transform: uppercase;
+}
